# rust-learning

./: .dockerignore  .gitignore  README.md
.github/workflows/: ci.yml  deploy-azure.yml
ai/: Cargo.toml  ai
ai-server/: Cargo.toml  nohup.out
ai-server/src/: doc.rs  main.rs
ai/src/: doc.rs  main.rs
deployment/: COMPLETE_DEPLOYMENT_GUIDE.md  api-image-build-completed.md  azure-resources.md  docker-build-push.md  task-6-deploy-web-aci.md  task-7-verify-deployment.md
docs/: CICD.md
docs/deployment/: DEPLOYMENT_SUMMARY.md  azure-commands.md  deployment-tasks.md  deployment_plan.md  manual-aci-deployment.md  task-3-aci-deployment-in-progress.md  task-3-deploy-api-aci.md  task-4-update-frontend-config.md  task-5-build-push-web.md
extender/: Cargo.toml
extender/src/: main.rs
gpui_bouncing_ball/: Cargo.toml  README.md  transcript.txt
gpui_bouncing_ball/src/: main.rs
rapier_physics/: Cargo.toml  README.md
rapier_physics/src/: constants.rs  lib.rs  main.rs
rust-cli-echo/: Cargo.toml  README.md
rust-cli-echo/src/: main.rs
rust-docker-server/: Cargo.toml  Dockerfile  README.md
rust-docker-server/src/: main.rs
rust-docker-server/static/: index.html
rust-docker-server/tests/: health_test.rs
rust-gemini-llm-client/: Cargo.toml  README.md
rust-gemini-llm-client/src/: lib.rs  list_models.rs  main.rs
rust-gpui-app/: ARCHITECTURE.md  Cargo.toml  README.md
rust-gpui-app/components/: chat-component.md  message_item.md  messages_area.md
rust-gpui-app/src/: lib.rs  main.rs
rust-gpui-app/src/app/: mod.rs  window.rs
rust-gpui-app/src/components/: button.rs  card.rs  chat.rs  chat_input.rs  color_swatch.rs  message_item.rs  messages_area.rs  mod.rs  text_input.rs
rust-gpui-app/src/services/: gemini.rs  gemini_service.rs  mod.rs
rust-gpui-app/src/state/: mod.rs
rust-gpui-app/src/theme/: colors.rs  mod.rs
rust-gpui-app/src/utils/: mod.rs  parser.rs
rust-gpui-app/src/views/: home.rs  mod.rs
rust-gpui-app/tests/: gemini_integration_test.rs  message_item_render_test.rs
rust-simple-rest-api/: .dockerignore  Cargo.toml  Dockerfile  README.md
rust-simple-rest-api/scripts/: build-and-push-api.sh
rust-simple-rest-api/src/: main.rs
rust-static-web-server/: Cargo.toml  Dockerfile  README.md
rust-static-web-server/src/: main.rs
rust-static-web-server/static/: chat.html  (+2 more)
rust-weather-api-client/: .env  .env.example  Cargo.toml  README.md
rust-weather-api-client/src/: main.rs  models.rs
scripts/: build-and-push-web.sh  cleanup-azure.sh  create-azure-resources.sh  deploy-all.sh  deploy-api-aci-simple.sh  deploy-api-to-aci.sh  deploy-static.sh  deploy-web-to-aci.sh
(+13 files in other folders)
