[package]
name = "extender"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.0"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenvy = "0.15"

[dev-dependencies]
actix-rt = "2.0"
wiremock = "0.6"
