[package]
name = "rust-gemini-llm-client"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11", features = ["json", "stream"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15"
futures-util = "0.3"

[[bin]]
name = "list_models"
path = "src/list_models.rs"


