[package]
name = "rust-gpui-app"
version = "0.1.0"
edition = "2021"

[dependencies]
gpui = "0.2.2"
reqwest = { version = "0.11", features = ["json", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4"] }
dotenv = "0.15.0"
pulldown-cmark = "0.9"
